--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "^13.2.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.4.1",
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
