--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@next/font": "^13.2.4",
+    "chart.js": "^4.3.0",
+    "cookie": "^0.5.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "next": "^13.4.1",
     "node-fetch": "^3.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "standard": "^17.0.0"
